--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -1,8 +1,9 @@
 
   div {
     color: rgb(175, 201, 206);
-    background: red;
-
+      font-size: 32 px;
+      text-align: center;
+      font-weight: bold;
   }
   .alert-text {
     color: red;
