--- a/recipes/BoxModel2.css
+++ b/recipes/BoxModel2.css
@@ -1,22 +1,38 @@
+div{
+  padding: 30px;
+  text-align: center;
+  margin-bottom: 10px;
+  color: #EEE;
+}
+.introduction {
+  background-color: #548CA8;
+}
 
+.main-content {
+  background-color: #44657c;
+}
+
+.contact-us {
+  background-color: #334257;
+}
 p, 
 ul {
-    width: 350px;
-    height: 150px;
-    padding: 25px;
-    margin: 10px;
-    border: 5px solid black;
+    width: auto;
+    height: auto;
+    padding: auto;
+    margin: 100px;
+    border: 0.5px solid black;
 }
 
 span,
 li {
-  border: 2px solid blue;
+  border: 3px solid blue;
 }
 
 ul {
-  display: inline-flex;
+  display: inline-block;
   list-style: none;
-  padding: 0;
+  padding: 2px;
 } 
 
 .inline {
